--- a/src/app/attendance/view-table/view-table.component.css
+++ b/src/app/attendance/view-table/view-table.component.css
@@ -11,9 +11,21 @@
     max-width: auto;
 }
 
+tr:hover {
+    background: #000;
+    color: white
+}
+
 img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
+    border-radius: 80%;
+}
+
+
+
+.empImg {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
