--- a/src/app/employee-details/inactive-employee/inactive-employee.component.html
+++ b/src/app/employee-details/inactive-employee/inactive-employee.component.html
@@ -13,7 +13,6 @@
           <h2>Inactive Employee List</h2>
           <input
             pInputText
-            [(ngModel)]="clearthebar"
             class="p-inputtext"
             type="text"
             (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
@@ -62,7 +61,7 @@
       </ng-template>
     </p-table>
     <p-dialog
-      header="Do you want to Activate :- {{ EmpnameFordis }}"
+      header="Do you want to Activate :- {{ individualData.employeeName }}"
       [(visible)]="visible"
       [modal]="true"
     >
@@ -104,13 +103,3 @@
     </p-dialog>
   </p-card>
 </div>
-
-<!-- 
-<label
->Activate :
-<p-inputSwitch
-  [disabled]="disabled"
-  (onChange)="toggleActiveFn($event, individualData)"
-  id="employee_active_status_switch_btn"
-></p-inputSwitch>
-</label> -->
