--- a/src/app/employee-details/profile-details/profile-details.component.html
+++ b/src/app/employee-details/profile-details/profile-details.component.html
@@ -1,5 +1,5 @@
 <div class="headback1">
-  <h1 id="headding">Employee Details</h1>
+  <h1 id="page_heading">Employee Details</h1>
 </div>
 <div class="card">
   <p-table
@@ -29,7 +29,7 @@
           pInputText
           type="text"
           (input)="dt1.filterGlobal($any($event.target).value, 'contains')"
-          placeholder="Search keyword"
+          placeholder="Search Department"
         />
       </span>
     </ng-template>
