--- a/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/shared-module/side-nav-bar/side-nav-bar.component.css
@@ -5,6 +5,7 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+
 .outer {
     display: flex;
     margin-top: 100px;
@@ -16,7 +17,7 @@
     flex: 1 1 0;
     max-width: 300px;
     padding: 32px 16px;
-    background-color: rgb(52, 61, 74);
+    background-color: rgb(55, 149, 241);
     border-top-right-radius: 1rem;
     border: 1px solid;
 }
@@ -27,7 +28,7 @@
 
 .innerSideBar .menu .menu-item {
     display: block;
-    padding: 16px;
+    padding: 10px;
     color: #fff;
     text-decoration: none;
     transition: 0.2s ease-in-out;
@@ -38,10 +39,6 @@
     border-right: 5px solid #3bba9c;
 }
 
-.innerSideBar .menu .menu-item:hover {
-    color: #3bba9c;
-    border-right: 5px solid #3bba9c;
-}
 
 .menu-toggle {
     display: none;
@@ -104,9 +101,11 @@
     font-size: 1.2rem;
     color: #fff;
     font-family: sans-serif;
+    cursor: pointer;
+
 }
 
-.btn {
+a {
     position: relative;
     width: 16rem;
     height: 3rem;
@@ -120,11 +119,12 @@
     font-weight: 500;
     color: white;
     border: none;
-    background-color: rgb(52, 61, 74);
+
     text-align: left;
+    cursor: pointer;
 }
 
-.btn:hover {
+a:hover {
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     color: #3bba9c;
@@ -133,12 +133,12 @@
 
 }
 
-/* .btn:active {
+/* a:active {
     transform: translateY(-1px);
     box-shadow: 0 5px 10px #3bba9c;
 } */
 
-.btn::after {
+a::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -150,11 +150,11 @@
     transition: all .4s;
 }
 
-.btn::after {
+a::after {
     color: #3bba9c;
 }
 
-/* .btn:hover::after {
+/* a:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
 } */
