--- a/src/app/employee-details/profile-details/profile-details.component.html
+++ b/src/app/employee-details/profile-details/profile-details.component.html
@@ -12,7 +12,15 @@
       'department',
       'gender',
       'mobileNo',
-      'city'
+      'city',
+      'nationality',
+      'CTC',
+      'qualification',
+      'experience',
+      'email',
+      'totalyear',
+      'dateOfJoining',
+      'dateOfBirth'
     ]"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
