--- a/src/app/employee-details/profile-details/profile-details.component.css
+++ b/src/app/employee-details/profile-details/profile-details.component.css
@@ -6,8 +6,8 @@
   font-size: x-large;
   width: 100%;
 }
-
+/* 
 tr:hover {
-  color: whitesmoke;
-  background-color: #779fba;
-}
+  color: black;
+  background-color: #eeeeee;
+} */
